--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "src/index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "test": "yarn build && jest",
+    "test": "jest",
     "lint": "eslint --format codeframe --ext mjs,js src test"
   },
   "devDependencies": {
@@ -14,6 +14,7 @@
     "@neutrinojs/airbnb-base": "^9.1.0",
     "@neutrinojs/jest": "^9.1.0",
     "@neutrinojs/library": "^9.1.0",
+    "babel-jest": "^25.1.0",
     "eslint": "^6",
     "jest": "^25",
     "neutrino": "^9.1.0",
