--- a/package.json
+++ b/package.json
@@ -1,31 +1,50 @@
 {
   "name": "costa-rica-iban",
   "version": "1.0.4",
-  "main": "dist/costa-rica-iban.min.js",
-  "license": "MIT",
+  "license": "Apache-2.0",
+  "author": "Jean M. Lescure",
+  "contributors": [
+    {
+      "name": "Jean M. Lescure",
+      "email": "opensource@jeanlescure.io",
+      "url": "http://jeanlescure.io/"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/jeanlescure/costa-rica-iban"
   },
+  "main": "dist/costa-rica-iban.min.js",
+  "typings": "dist/costa-rica-iban.d.ts",
   "scripts": {
-    "build": "webpack --mode production",
-    "test": "jest",
-    "lint": "eslint --format codeframe --ext mjs,js src test",
-    "dist:update": "rm -rf ./dist && cp -r ./build ./dist",
-    "dist:commit": "git add ./dist && git commit -m \"dist updated\"",
-    "deploy": "yarn test && yarn build && yarn dist:update && yarn dist:commit && yarn publish"
+    "dev": "./scripts/dev",
+    "test": "./scripts/test",
+    "build": "./scripts/build",
+    "release": "release-it"
+  },
+  "release-it": {
+    "git": {
+      "changelog": "auto-changelog --stdout -l false -u -t ./assets/changelog-compact.hbs"
+    },
+    "hooks": {
+      "after:bump": "./scripts/release"
+    },
+    "npm": {
+      "publish": false
+    }
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@neutrinojs/airbnb-base": "^9.1.0",
-    "@neutrinojs/jest": "^9.1.0",
-    "@neutrinojs/library": "^9.1.0",
-    "babel-jest": "^25.1.0",
-    "eslint": "^6",
-    "jest": "^25",
-    "neutrino": "^9.1.0",
-    "webpack": "^4",
-    "webpack-chain": "^6.4.0",
-    "webpack-cli": "^3"
+    "@types/jest": "27.0.2",
+    "@types/node": "16.11.4",
+    "auto-changelog": "2.3.0",
+    "esbuild": "0.14.0",
+    "jest": "27.3.1",
+    "refup": "1.1.0",
+    "release-it": "14.11.6",
+    "ts-jest": "27.0.7",
+    "ts-node": "10.4.0",
+    "ts-node-dev": "1.1.8",
+    "tslib": "2.3.1",
+    "typescript": "4.4.4"
   }
 }
